--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>退讚潮</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-6803435908008500",
+            enable_page_level_ads: true
+       });
+  </script>
   </head>
   <body>
   <section class="section">
