--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="退讚 柯文哲 蔡英文 郭台銘 韓國瑜" />
     <title>退讚潮</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
   <body>
