--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           var URL = `https://notify-bot.line.me/oauth/authorize?
             response_type=code
             &client_id=tmTkREsah18EgTBAgj67Cv
-            &redirect_uri=idphobia.github.io
+            &redirect_uri=https://idphobia.github.io
             &scope=notify
             &state=NO_STATE`;
           window.location.href = URL;
