--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </script>
   <script>
       function oAuth2() {
-          var URL = `https://notify-bot.line.me/oauth/authorize?response_type=code&client_id=tmTkREsah18EgTBAgj67Cv&redirect_uri=https://idphobia.github.io&scope=notify&state=NO_STATE`;
+          var URL = `https://notify-bot.line.me/oauth/authorize?response_type=code&client_id=tmTkREsah18EgTBAgj67Cv&redirect_uri=https:/'/'idphobia.github.io/'&scope=notify&state=NO_STATE`;
           window.location.href = URL;
       }
   </script>    
