--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <script>
       function oAuth2() {
           var URL = `https://notify-bot.line.me/oauth/authorize
- ?response_type=code&client_id=tmTkREsah18EgTBAgj67Cv&redirect_uri=${encodeURIComponent('https://idphobia.github.io/)'}&scope=notify&state=NO_STATE`;
+ ?response_type=code&client_id=tmTkREsah18EgTBAgj67Cv&redirect_uri=${encodeURIComponent('https://idphobia.github.io/')}&scope=notify&state=NO_STATE`;
           window.location.href = URL;
       }
   </script>    
