--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
     gtag('config', 'UA-90090987-2');
   </script>
   <script>
+      const redUrl = 'https://idphobia.github.io/index.html';
       function oAuth2() {
           var URL = `https://notify-bot.line.me/oauth/authorize
- ?response_type=code&client_id=tmTkREsah18EgTBAgj67Cv&redirect_uri=${encodeURIComponent('https://idphobia.github.io/')}&scope=notify&state=NO_STATE`;
+ ?response_type=code&client_id=tmTkREsah18EgTBAgj67Cv&redirect_uri=${encodeURIComponent(redUrl)}&scope=notify&state=NO_STATE`;
           window.location.href = URL;
       }
   </script>    
